// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown should render the only menu icon with variant=[image] 1`] = `
<div
  className="flex items-start relative"
>
  <div
    aria-hidden={true}
    className="menu-icon-container rounded-full p-2"
    data-testid="menu-icon"
  >
    <svg
      className="menu-icon"
      data-file-name="SvgVerticalThreeDots"
    />
  </div>
</div>
`;

exports[`DropDown should render the only menu icon with variant=[post] 1`] = `
<div
  className="flex items-start relative"
>
  <div
    aria-hidden={true}
    className="menu-icon-container"
    data-testid="menu-icon"
  >
    <svg
      className="menu-icon"
      data-file-name="SvgVerticalThreeDots"
    />
  </div>
</div>
`;
